version 0.1.3
- gower_dist now returns numeric(0) invisibly when there are no columns to compare.
- gower_topn now returns a list with empty matrices when there are no columns to compare.
- gower_topn now warns when n>nrow(y) and sets n=nrow(y)
- bugfix: comparing factors with characters would cause a crash (thanks to Max Kuhn)

version 0.1.2
- fixed valgrind warning
- registered native routines, as now recommended by CRAN

version 0.1.1
- gower_dist now issues warning when nr of rows on input do not divide (recycling)
- Code now depends on gcc version for compatability with Windows + R<=3.2.x
- Bugfix: bad range calculation caused faulty distance computation

version 0.1.0 
- First release
